# UTC-TA

./: .gitignore  Dockerfile  README.md  app.py  description.md  main.py  pyproject.toml  requirements.txt  test.json
src/backend/: embedding.py  graph.py  processing.py
src/backend/agents/: chunker.py  llm.py  prompt.py  retriever.py
src/backend/core/: schema.py
src/backend/store/: embedding_store.py  store.py
src/frontend/: gui.py
