[project]
name = "utc-ta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.70.0",
    "langchain-huggingface==1.2.2",
    "langchain-openai==1.1.9",
    "langgraph==1.1.10",
    "markdown==3.10.2",
    "markitdown==0.1.5",
    "networkx>=3.6.1",
    "numpy==2.2.6",
    "openai==1.109.1",
    "pydantic==2.13.3",
    "pymupdf==1.27.2.3",
    "pymupdf4llm==1.27.2.3",
    "python-dotenv==1.2.2",
    "rank-bm25==0.2.2",
    "sentence-transformers==5.4.0",
    "streamlit==1.54.0",
    "turbovec==0.7.0",
    "underthesea>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
